# Parser_ini

./: CMakeLists.txt  Parser.cpp  Parser.h  README.md  SecondaryFunction.cpp  SecondaryFunction.h  main.cpp  test2.ini  Я соберу проект под Windows.cmd
Parse/: Parser.cpp  Parser.h
SecondFunk/: SecondaryFunction.cpp  SecondaryFunction.h
